force-app/main/default/objects/Muestra__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Solicitud_de_Muestra__r.Oportunidad__r.Account.Id , Solicitud_de_Muestra__r.Oportunidad__r.Account.Name, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>