force-app/main/default/objects/Muestra__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <inlineHelpText>Add relevant comments about the sample</inlineHelpText>
    <label>Descripcion</label>
    <type>TextArea</type>
</CustomField>