force-app/main/default/objects/Muestra__c/fields/DescripcionProducto__c.field-meta.xml
<CustomField>
    <fullName>DescripcionProducto__c</fullName>
    <formula>Producto__r.Descripcion_Larga__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Producto</label>
    <type>Text</type>
</CustomField>