force-app/main/default/objects/Muestra__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>English version of the description</description>
    <inlineHelpText>English version of the description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>