force-app/main/default/objects/Muestra__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Solicitada a Fábrica</fullName>
            </value>
            <value>
                <fullName>En Producción</fullName>
            </value>
            <value>
                <fullName>Producción finalizada</fullName>
            </value>
            <value>
                <fullName>Enviada</fullName>
            </value>
            <value>
                <fullName>Recibida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>