force-app/main/default/objects/Muestra__c/fields/Fecha_de_finalizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finalizacion__c</fullName>
    <description>Cuando se terminaron de producir todos los items de la muestra</description>
    <inlineHelpText>When the product was completed, all items of the sample</inlineHelpText>
    <label>Fecha de finalización</label>
    <type>Date</type>
</CustomField>