force-app/main/default/objects/Muestra__c/fields/ID_DO__c.field-meta.xml
<CustomField>
    <fullName>ID_DO__c</fullName>
    <formula>Producto__r.CodigoDeProductoBase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código-PG</label>
    <type>Text</type>
</CustomField>