force-app/main/default/objects/Muestra__c/fields/ID_Supplier__c.field-meta.xml
<CustomField>
    <fullName>ID_Supplier__c</fullName>
    <formula>Producto__r.Codigo_Proveedor2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Proveedor</label>
    <type>Text</type>
</CustomField>