force-app/main/default/objects/Muestra__c/fields/Imagen_Muestra__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Muestra__c</fullName>
    <description>Identificador de la imagen de muestra</description>
    <label>Imagen Muestra</label>
    <length>80</length>
    <type>Text</type>
</CustomField>