force-app/main/default/objects/Muestra__c/fields/Numero_de_gu_a_DHL__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_gu_a_DHL__c</fullName>
    <description>Numero para seguimiento de paquetes</description>
    <inlineHelpText>Tracking number for packages.</inlineHelpText>
    <label>Numero de guía DHL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>