force-app/main/default/objects/Muestra__c/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <description>Total cost paid to obtain the sample from the supplier, including sample charges and related costs if applicable.</description>
    <inlineHelpText>Enter the total cost of the sample in the corresponding currency. Include any charges paid to the supplier for sample production.</inlineHelpText>
    <label>Sample Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>