force-app/main/default/objects/Muestra__c/fields/Sample_Refundable__c.field-meta.xml
<CustomField>
    <fullName>Sample_Refundable__c</fullName>
    <description>Indicates whether the supplier has agreed to refund the sample cost.</description>
    <inlineHelpText>Check this box if the supplier will refund the sample cost.</inlineHelpText>
    <label>Sample Refundable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>