force-app/main/default/objects/Muestra__c/fields/Sample_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Sample_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the supplier has already refunded the sample cost.</description>
    <inlineHelpText>Check this box once the refund has been received</inlineHelpText>
    <label>Sample Refunded</label>
    <type>Checkbox</type>
</CustomField>