force-app/main/default/objects/Muestra__c/fields/Seguir_en_DHL__c.field-meta.xml
<CustomField>
    <fullName>Seguir_en_DHL__c</fullName>
    <formula>IF(Numero_de_gu_a_DHL__c == null,
&quot;Aún sin número de guía&quot;,
HYPERLINK(&quot;http://www.dhl.com/en/express/tracking.html?AWB=&quot; + 
  Numero_de_gu_a_DHL__c 
  + &quot;&amp;brand=DHL&quot;, &quot;Seguir en DHL&quot;, &quot;_blank&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguir en DHL</label>
    <type>Text</type>
</CustomField>