force-app/main/default/objects/Muestra__c/fields/Solicitud_de_Muestra__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Muestra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitud de Muestra</label>
    <referenceTo>Solicitud_de_Muestra__c</referenceTo>
    <relationshipLabel>Muestras</relationshipLabel>
    <relationshipName>Muestras</relationshipName>
    <type>Lookup</type>
</CustomField>