force-app/main/default/objects/Muestra__c/fields/Thumb_1__c.field-meta.xml
<CustomField>
    <fullName>Thumb_1__c</fullName>
    <formula>IF(ISBLANK(Producto__c),
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + Imagen_Muestra__c, &apos;Imagen Muestra&apos;, 75, 75),
Producto__r.Thumb1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumb 1</label>
    <type>Text</type>
</CustomField>