force-app/main/default/objects/Muestra__c/listViews/Muestras_pendientes.listView-meta.xml
<ListView>
    <fullName>Muestras_pendientes</fullName>
    <columns>NAME</columns>
    <columns>ID_DO__c</columns>
    <columns>PropietarioOrigen__c</columns>
    <columns>Cliente__c</columns>
    <columns>Tipo__c</columns>
    <columns>Cantidad__c</columns>
    <columns>Producto__c</columns>
    <columns>Descripcion__c</columns>
    <columns>Thumb_1__c</columns>
    <columns>Fecha_de_finalizacion__c</columns>
    <columns>Numero_de_gu_a_DHL__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>notEqual</operation>
        <value>Enviada,Recibida</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>12/1/2024 12:00 AM</value>
    </filters>
    <label>SAMPLES PENDING</label>
</ListView>