force-app/main/default/objects/Muestra__c/listViews/Todas_las_Muestras_Vista_Ventas.listView-meta.xml
<ListView>
    <fullName>Todas_las_Muestras_Vista_Ventas</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tipo__c</columns>
    <columns>Cantidad__c</columns>
    <columns>ID_DO__c</columns>
    <columns>Producto__c</columns>
    <columns>Descripcion__c</columns>
    <columns>Thumb_1__c</columns>
    <columns>Fecha_de_finalizacion__c</columns>
    <columns>Seguir_en_DHL__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>notEqual</operation>
        <value>Enviada</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>notEqual</operation>
        <value>Recibida</value>
    </filters>
    <label>All Samples</label>
</ListView>